@@ -7,6 +7,7 @@
   subscription to foo/# exists (bug #901697).
 - SO_REUSEADDR doesn't work the same on Windows, so don't use it.
 - Cygwin builds now support Windows service features.
+- Fix $SYS/broker/bytes/sent reporting.
 
 0.14.2 - 20111123
 =================
